set(LIB_TARGET_NAME "lwhttp")

file(GLOB LIB_SRC_FILES "*.cpp")
if (CMAKE_HOST_WIN32)
    add_library(${LIB_TARGET_NAME} STATIC ${LIB_SRC_FILES})
elseif (CMAKE_HOST_UNIX)
    add_library(${LIB_TARGET_NAME} SHARED ${LIB_SRC_FILES})
endif ()
if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
    add_definitions(-D_DEBUG)
endif ()

set(OPENSSL_ROOT_DIR "D:/Program Files/OpenSSL")
find_package(OpenSSL 1.1.1 REQUIRED COMPONENTS Crypto SSL)
if (OPENSSL_FOUND)
    message(STATUS "OPENSSL_INCLUDE_DIR = ${OPENSSL_INCLUDE_DIR}")
    message(STATUS "OPENSSL_CRYPTO_LIBRARY = ${OPENSSL_CRYPTO_LIBRARY}")
    message(STATUS "OPENSSL_CRYPTO_LIBRARIES = ${OPENSSL_CRYPTO_LIBRARIES}")
    message(STATUS "OPENSSL_SSL_LIBRARY = ${OPENSSL_SSL_LIBRARY}")
    message(STATUS "OPENSSL_SSL_LIBRARIES = ${OPENSSL_SSL_LIBRARIES}")
    message(STATUS "OPENSSL_LIBRARIES = ${OPENSSL_LIBRARIES}")
    message(STATUS "OPENSSL_VERSION = ${OPENSSL_VERSION}")
    include_directories(${OPENSSL_INCLUDE_DIR})
    target_link_libraries(${LIB_TARGET_NAME} OpenSSL::Crypto OpenSSL::SSL)
endif ()

if (CMAKE_HOST_WIN32)
    target_link_libraries(${LIB_TARGET_NAME} ws2_32)
endif ()