set(TARGET_NAME "lwhttp")

file(GLOB LIB_SRC_FILES "*.cpp")
add_library(${TARGET_NAME} SHARED ${LIB_SRC_FILES})

if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
    add_definitions(-D_DEBUG)
endif ()

if (CMAKE_HOST_WIN32)
    message("host is windows")
    # TLS
    include_directories("D:/OpenCode/LibreSSL/gcc/include")
    set(SSL_STATIC_LIB_DIR "D:/OpenCode/LibreSSL/gcc/lib")
    add_library(libtls STATIC IMPORTED)
    set_property(TARGET libtls PROPERTY IMPORTED_LOCATION "${SSL_STATIC_LIB_DIR}/libtls-22.a")
    add_library(libssl STATIC IMPORTED)
    set_property(TARGET libssl PROPERTY IMPORTED_LOCATION "${SSL_STATIC_LIB_DIR}/libssl-50.a")
    add_library(libcrypto STATIC IMPORTED)
    set_property(TARGET libcrypto PROPERTY IMPORTED_LOCATION "${SSL_STATIC_LIB_DIR}/libcrypto-47.a")
    target_link_libraries(${TARGET_NAME} libcrypto libtls libssl "-lbcrypt" ws2_32)
elseif (CMAKE_HOST_UNIX)
    message("host is Unix/Linux")
    include_directories("/usr/local/libressl/include")
    set(SSL_STATIC_LIB_DIR "/usr/local/libressl/lib")
    add_library(libtls STATIC IMPORTED)
    set_property(TARGET libtls PROPERTY IMPORTED_LOCATION "${SSL_STATIC_LIB_DIR}/libtls.a")
    add_library(libssl STATIC IMPORTED)
    set_property(TARGET libssl PROPERTY IMPORTED_LOCATION "${SSL_STATIC_LIB_DIR}/libssl.a")
    add_library(libcrypto STATIC IMPORTED)
    set_property(TARGET libcrypto PROPERTY IMPORTED_LOCATION "${SSL_STATIC_LIB_DIR}/libcrypto.a")
    target_link_libraries(${TARGET_NAME} libtls libssl libcrypto)
endif ()