set(TARGET_NAME "lwhttp")

file(GLOB LIB_SRC_FILES "*.cpp")
if (CMAKE_HOST_WIN32)
add_library(${TARGET_NAME} STATIC ${LIB_SRC_FILES})
elseif (CMAKE_HOST_UNIX)
    add_library(${TARGET_NAME} SHARED ${LIB_SRC_FILES})
endif ()
if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
    add_definitions(-D_DEBUG)
endif ()

if (CMAKE_HOST_WIN32)
    include_directories("D:/OpenCode/LibreSSL/msvc/include")
    set(SSL_STATIC_LIB_DIR "D:/OpenCode/LibreSSL/msvc/lib")
    add_library(libtls STATIC IMPORTED)
    set_property(TARGET libtls PROPERTY IMPORTED_LOCATION "${SSL_STATIC_LIB_DIR}/tls-22.lib")
    add_library(libssl STATIC IMPORTED)
    set_property(TARGET libssl PROPERTY IMPORTED_LOCATION "${SSL_STATIC_LIB_DIR}/ssl-50.lib")
    add_library(libcrypto STATIC IMPORTED)
    set_property(TARGET libcrypto PROPERTY IMPORTED_LOCATION "${SSL_STATIC_LIB_DIR}/crypto-47.lib")
    target_link_libraries(${TARGET_NAME} libcrypto libtls libssl ws2_32 bcrypt)
elseif (CMAKE_HOST_UNIX)
    include_directories("/usr/local/libressl/include")
    set(SSL_STATIC_LIB_DIR "/usr/local/libressl/lib")
    add_library(libtls STATIC IMPORTED)
    set_property(TARGET libtls PROPERTY IMPORTED_LOCATION "${SSL_STATIC_LIB_DIR}/libtls.a")
    add_library(libssl STATIC IMPORTED)
    set_property(TARGET libssl PROPERTY IMPORTED_LOCATION "${SSL_STATIC_LIB_DIR}/libssl.a")
    add_library(libcrypto STATIC IMPORTED)
    set_property(TARGET libcrypto PROPERTY IMPORTED_LOCATION "${SSL_STATIC_LIB_DIR}/libcrypto.a")
    target_link_libraries(${TARGET_NAME} libtls libssl libcrypto)
endif ()